--- a/content/resources/21a-461s13-th.md
+++ b/content/resources/21a-461s13-th.md
@@ -3,7 +3,7 @@ content_type: resource
 description: An illustration of The New York Stock Exchange, then located at 10-12
   Broad Street, now located at 11 Wall Street in Manhattan. Illustration by Hughson
   Hawley, 1882.
-file: /media/courses/21a-461-what-is-capitalism-fall-2013/ee4ee5e40668ff9ac0bb7ba80d8aa11c_21A-461s13-th.jpg
+file: /courses/21a-461-what-is-capitalism-fall-2013/ee4ee5e40668ff9ac0bb7ba80d8aa11c_21A-461s13-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "The New York Stock Exchange, then located at 10\u20132 Broad Street, now\
@@ -20,3 +20,5 @@ resourcetype: Image
 title: 21A-461s13-th.jpg
 uid: ee4ee5e4-0668-ff9a-c0bb-7ba80d8aa11c
 ---
+An illustration of The New York Stock Exchange, then located at 10-12 Broad Street, now located at 11 Wall Street in Manhattan. Illustration by Hughson Hawley, 1882.
+
