--- a/content/resources/21a-461s13.md
+++ b/content/resources/21a-461s13.md
@@ -3,7 +3,7 @@ content_type: resource
 description: An illustration of The New York Stock Exchange, then located at 10-12
   Broad Street, now located at 11 Wall Street in Manhattan.  Illustration by Hughson
   Hawley, 1882.
-file: /media/courses/21a-461-what-is-capitalism-fall-2013/39f82fb8615a8881c498d4883ef522c6_21A-461s13.jpg
+file: /courses/21a-461-what-is-capitalism-fall-2013/39f82fb8615a8881c498d4883ef522c6_21A-461s13.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "The New York Stock Exchange, then located at 10\u20132 Broad Street, now\
@@ -20,3 +20,5 @@ resourcetype: Image
 title: 21A-461s13.jpg
 uid: 39f82fb8-615a-8881-c498-d4883ef522c6
 ---
+An illustration of The New York Stock Exchange, then located at 10-12 Broad Street, now located at 11 Wall Street in Manhattan.  Illustration by Hughson Hawley, 1882.
+
