--- a/content/resources/21a-461s13-th.md
+++ b/content/resources/21a-461s13-th.md
@@ -15,10 +15,10 @@ image_metadata:
     with an American flag on top. Ladies and gentlemen are walking and riding in horse-drawn
     carriages at street-level.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21A-461s13-th.jpg
 uid: ee4ee5e4-0668-ff9a-c0bb-7ba80d8aa11c
 ---
 An illustration of The New York Stock Exchange, then located at 10-12 Broad Street, now located at 11 Wall Street in Manhattan. Illustration by Hughson Hawley, 1882.
-
