Sync all content

--- a/content/resources/21a-461s13.md
+++ b/content/resources/21a-461s13.md
@@ -4,6 +4,7 @@ description: An illustration of The New York Stock Exchange, then located at 10-
   Broad Street, now located at 11 Wall Street in Manhattan.  Illustration by Hughson
   Hawley, 1882.
 file: /courses/21a-461-what-is-capitalism-fall-2013/39f82fb8615a8881c498d4883ef522c6_21A-461s13.jpg
+file_size: 62829
 file_type: image/jpeg
 image_metadata:
   caption: "The New York Stock Exchange, then located at 10\u20132 Broad Street, now\
