--- a/content/resources/21a-461s13-th.md
+++ b/content/resources/21a-461s13-th.md
@@ -4,6 +4,7 @@ description: An illustration of The New York Stock Exchange, then located at 10-
   Broad Street, now located at 11 Wall Street in Manhattan. Illustration by Hughson
   Hawley, 1882.
 file: /courses/21a-461-what-is-capitalism-fall-2013/ee4ee5e40668ff9ac0bb7ba80d8aa11c_21A-461s13-th.jpg
+file_size: 6840
 file_type: image/jpeg
 image_metadata:
   caption: "The New York Stock Exchange, then located at 10\u20132 Broad Street, now\
